# feature-metadata-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  payload.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: main.py
app/models/: entity.py  request.py  response.py
app/services/: dummy_features.py  feature_service.py
app/utils/: constants.py  timestamp.py  validation.py
data/: feature_metadata.json
tests/: conftest.py  test_comprehensive.py  test_coverage.py  test_features.py  test_health.py  test_main.py  test_models.py  test_services.py  test_validation.py
tests/edge_cases/: test_boundary_conditions.py  test_data_validation.py  test_error_scenarios.py  test_race_conditions.py
tests/fixtures/: mock_responses.py  sample_features.json  test_data.py
tests/integration/: test_api_endpoints.py  test_cross_service.py  test_data_persistence.py  test_workflow_integration.py
tests/performance/: test_concurrent_load.py  test_memory_usage.py  test_response_times.py  test_scalability.py
tests/security/: test_data_security.py  test_injection_pervention.py  test_input_validation.py  test_role_permissions.py
tests/unit/test_models/: test_entity_models.py  test_request_models.py  test_response_models.py
tests/unit/test_services/: test_dummy_features.py  test_feature_service.py
tests/unit/test_utils/: test_constants.py  test_timestamp.py  test_validation.py
tests/workflow/: test_approval_workflow.py  test_feature_lifecycle.py  test_status_tranisitions.py  test_testing_workflow.py
